--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@pixi/ui": "^0.7.3",
     "classnames": "^2.3.2",
     "pixi.js": "^7.2.4",
     "react": "^18.2.0",
